--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  margin: auto;
+  width: 50%;
+  padding: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.grid-main {
+  display: grid;
+  grid-template-columns: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid-child {
+  border: 1px solid #e0e0e0;
+}
+
+.news-image {
+  width: 100%;
+}
+
+.news-title {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.select {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  width: 300px
+}
+
+.select-box {
+  width: 120px;
+  height: 25px;
+  border: 1px solid #e0e0e0;
+  outline: none;
+  padding: 5px;
 }
